Suitable for termite usage

--- a/termite.config
+++ b/termite.config
@@ -6,20 +6,28 @@ background = #272822
 foreground = #F8F8F2
 highlight = #49483E
 # Black
+# Grey
 color0 = #272822
+color8 = #49483E
 # Red
+# Dim red
 color1 = #F92672
+color9 = #F92672
 # Green
 color2 = #A6E22E
+color10 = #A6E22E
 # Yellow
 color3 = #FFE792
+color11 = #FFE792
 # Blue
 color4 = #66D9EF
+color12 = #66D9EF
 # Purple
 color5 = #AE81FF
+color13 = #AE81FF
 # Turquoise
 color6 = #2AA198
+color14 = #2AA198
 # White
 color7 = #F8F8F2
-# Grey
-color8 = #49483E
+color15 = #F8F8F2
