Use monokai theme in termite. Xdefault useless

--- a/termite.config
+++ b/termite.config
@@ -1,16 +1,25 @@
 [options]
-font = monospace 12
+# Use fontconfig to define the right font to use
+font = monospace
+
 
 [colors]
+
+######################
+# Monokai theme
+######################
+
+# Dark background
 background = #272822
+# Light foreground
 foreground = #F8F8F2
-highlight = #49483E
+
+# Color/Dim color
+
 # Black
-# Grey
 color0 = #272822
-color8 = #49483E
+color8 = #75715E
 # Red
-# Dim red
 color1 = #F92672
 color9 = #F92672
 # Green
@@ -22,12 +31,12 @@ color11 = #FFE792
 # Blue
 color4 = #66D9EF
 color12 = #66D9EF
-# Purple
+# Magenta
 color5 = #AE81FF
 color13 = #AE81FF
-# Turquoise
+# Cyan
 color6 = #2AA198
 color14 = #2AA198
 # White
 color7 = #F8F8F2
-color15 = #F8F8F2
+color15 = #F9F8F5
