Change dark-grey color

--- a/termite.config
+++ b/termite.config
@@ -17,7 +17,7 @@ foreground = #F8F8F2
 # Color/Dim color
 
 # Black
-color0 = #272822
+color0 = #000000
 color8 = #75715E
 # Red
 color1 = #F92672
@@ -38,5 +38,5 @@ color13 = #AE81FF
 color6 = #2AA198
 color14 = #2AA198
 # White
-color7 = #F8F8F2
+color7 = #FFFFFF
 color15 = #F9F8F5
