🔥 Remove colors declaration

--- a/termite.config
+++ b/termite.config
@@ -5,38 +5,9 @@ font = monospace
 
 [colors]
 
-######################
-# Monokai theme
-######################
-
 # Dark background
-background = #272822
+background = #282822
 # Light foreground
-foreground = #F8F8F2
+foreground = #f6f7ef
 
-# Color/Dim color
 
-# Black
-color0 = #000000
-color8 = #75715E
-# Red
-color1 = #F92672
-color9 = #F92672
-# Green
-color2 = #A6E22E
-color10 = #A6E22E
-# Yellow
-color3 = #FFE792
-color11 = #FFE792
-# Blue
-color4 = #66D9EF
-color12 = #66D9EF
-# Magenta
-color5 = #AE81FF
-color13 = #AE81FF
-# Cyan
-color6 = #2AA198
-color14 = #2AA198
-# White
-color7 = #FFFFFF
-color15 = #F9F8F5
