--- a/fontconfig/conf.d/05-third-party-fonts.conf
+++ b/fontconfig/conf.d/05-third-party-fonts.conf
@@ -5,5 +5,6 @@
 
 <fontconfig>
 <dir>/usr/share/texmf-dist/fonts/opentype/</dir>
+<dir>/home/brenon/.local/texlive/2016/texmf-dist/fonts/opentype/</dir>
 </fontconfig>
 
