--- a/fontconfig/conf.d/30-icons.conf
+++ b/fontconfig/conf.d/30-icons.conf
@@ -1,20 +1,8 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <!-- You are supposed to remove all the lines but the one(s) where the font is used in your terminal -->
-  <!-- Only monospaced fonts have been listed here -->
-  <!-- If your font isn't in the list, uncomment the next line and write its name -->
-  <!-- <alias><family>YOUR_TERMINAL_FONT</family><default><family>icons-in-terminal</family></default></alias> -->
-  <!--><alias><family>cursor.pcf</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>deccurs.pcf</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>decsess.pcf</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>DejaVu Sans Mono</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>Droid Sans Mono</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
   <alias><family>Inconsolata</family><prefer><family>icons-in-terminal</family></prefer></alias>
-  <!--><alias><family>Liberation Mono</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>micro.pcf</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>Nimbus Mono PS</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>Noto Color Emoji</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
-  <!--><alias><family>octicons</family><prefer><family>icons-in-terminal</family></prefer></alias></!-->
+  <alias><family>Source Code Pro</family><prefer><family>icons-in-terminal</family></prefer></alias>
   <alias><family>Monospace</family><default><family>icons-in-terminal</family></default></alias>
+  <alias><family>No font found</family><prefer><family>icons-in-terminal</family></prefer></alias>
 </fontconfig>
