Add MS fonts aliases

--- a/fontconfig/conf.d/81-ms-aliases.conf
+++ b/fontconfig/conf.d/81-ms-aliases.conf
@@ -14,6 +14,12 @@
       <family>Liberation Serif</family>
     </prefer>
   </alias>
+  <alias>
+    <family>Nimbus Roman No9 L</family>
+    <prefer>
+      <family>Liberation Serif</family>
+    </prefer>
+  </alias>
 
   <match>
     <test name="family"><string>Helvetica</string></test>
