Prefer Noto Color emoji as iconic font

--- a/fontconfig/conf.d/30-icons.conf
+++ b/fontconfig/conf.d/30-icons.conf
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+  <alias><family>JetBrains Mono</family><prefer><family>icons-in-terminal</family></prefer></alias>
   <alias><family>Inconsolata</family><prefer><family>icons-in-terminal</family></prefer></alias>
   <alias><family>Source Code Pro</family><prefer><family>icons-in-terminal</family></prefer></alias>
   <alias><family>Monospace</family><default><family>icons-in-terminal</family></default></alias>
