Use JetBrains Mono

--- a/fontconfig/conf.d/10-symbols.conf
+++ b/fontconfig/conf.d/10-symbols.conf
@@ -32,6 +32,7 @@ to be looked into when a glyph is not found in a specic font
   <alias>
     <family>icon</family>
     <prefer>
+      <family>Noto Color Emoji</family>
       <family>Noto Emoji</family>
       <family>Material Design Icons</family>
     </prefer>
