--- a/fontconfig/conf.d/80-aliases.conf
+++ b/fontconfig/conf.d/80-aliases.conf
@@ -24,6 +24,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>JetBrains Mono</family>
       <family>Inconsolata for Powerline</family>
       <family>Inconsolata</family>
       <family>Liberation Mono</family>
